[tool.poetry]
name = "telegram-editor-bot"
version = "0.1.0"
description = "A editor bot with telegram frontend"
authors = ["NotisFobbidden <fobbidennotis@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.14.0"
moviepy = "^1.0.3"

[tool.pyright]
venvPath = "."
venv = ".venv"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
